styles.css
:root {
  --primary: #e54e37;
  --primary-light: #f4c7c1;
  --secondary: #004987;
  --dark: #515151;
}
* {
  box-sizing: border-box;
}
body {
  margin: 0;
  padding: 0;
  font-family: Futura, Gill Sans, sans-serif;
  color: var(--dark);
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

h2 {
  padding: 10px;
  margin-bottom: 0;
}

h3 {
  font-size: 14px;
  font-weight: normal;
  padding: 10px;
  margin: 0;
  margin-bottom: 20px;
}

a {
  color: var(--primary);
}

.alert {
  margin: 10px;
  padding: 10px;
  border-radius: 3px;
  background-color: #c6ffe4;
}

.leaderboard,
.competitions,
nav {
  max-width: 500px;
  margin: 0 auto;
}

nav {
  padding: 10px;
  display: grid;
  grid-template-columns: auto auto;
  justify-content: flex-start;
  column-gap: 20px;
}

.competitions ul {
  margin-top: 30px;
  padding: 10px;
}
.competitions ul li {
  margin-bottom: 30px;
}

.competitions li.completed {
  opacity: 0.3;
  transition: all 0.1s;
}
.competitions li.completed:hover {
  opacity: 1;
}
.competition {
  text-decoration: none;
  color: inherit;
  display: grid;
  grid-template-columns: 50px 1fr;
  column-gap: 10px;
  align-items: center;
  color: var(--dark);
}
.calendar-event {
  opacity: 0.7;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 2px solid currentColor;
  border-radius: 3px;
  padding: 3px;
  font-size: 12px;
  border-top-width: 8px;
}
.calendar-event b {
  font-size: 16px;
}

.competition p {
  margin: 0;
  opacity: 0.7;
  font-size: 14px;
}
.competition h4 {
  font-size: 16px;
  margin: 0 0 4px;
  font-weight: normal;
}
.competitions li.completed .competition {
  color: inherit;
}

.leaderboard ul li {
  display: block;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.leaderboard .player {
  all: unset;
  display: grid;
  grid-template-columns: 30px auto 80px;
  column-gap: 15px;
  padding: 10px 10px;
  transition: all 0.2s;
  min-height: 50px;
}

.leaderboard .player.favorite-player {
  background-color: rgba(0, 0, 0, 0.7);
  color: #f0f0f0;
}

.leaderboard .stats {
  transition: all 0.2s;
  overflow: hidden;
  grid-column-start: 2;
  grid-column-end: 4;
}

.leaderboard .favorite {
  all: unset;
  position: absolute;
  bottom: 0;
  left: 50%;
  padding: 0;
  line-height: 0;
  transform: translateX(-50%);
}

.leaderboard .round {
  font-family: monospace;
  font-size: 12px;
  display: flex;
  opacity: 0.5;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2px;
}

.leaderboard .round-start-time {
  grid-column-start: 1;
  grid-column-end: 17;
}

.round-score {
  width: 15px;
  height: 15px;
  display: block;
  text-align: center;
  line-height: 1;
  font-size: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 0px solid rgba(0, 0, 0, 0.5);
}
.round-total {
  font-weight: bold;
}
.round-total.under-par {
  color: var(--primary);
}
.favorite-player .round-total.under-par {
  color: var(--primary-light);
}
.favorite-player .round-score {
  border-color: rgba(255, 255, 255, 0.5);
}
.round-score.birdie {
  border-width: 1px;
  border-radius: 50%;
}
.round-score.eagle {
  border-width: 3px;
  border-radius: 50%;
}
.round-score.bogey {
  border-width: 1px;
}
.round-score.bogey-plus {
  border-width: 3px;
}

.leaderboard .score {
  text-align: right;
  font-size: 18px;
  line-height: 25px;
}

.leaderboard .position {
  position: relative;
  font-size: 18px;
  grid-row-start: 1;
  grid-row-end: 3;
  text-align: center;
}
.leaderboard .favorite-player .score.under-par {
  color: #fff;
}
.leaderboard .score.under-par {
  color: red;
}

.leaderboard .club {
  display: block;
  opacity: 0.5;
  font-size: 12px;
  margin: 3px 0 5px;
}
footer {
  text-align: center;
  opacity: 0.3;
  padding: 100px 10px;
}

